--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
+    "react-beforeunload-component": "^1.2.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
