--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.2",
+    "i18next": "^20.1.0",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-xhr-backend": "^3.2.2",
     "netlify-cms": "^2.10.48",
     "netlify-cms-app": "^2.12.12",
     "node-sass": "^4.14.1",
@@ -53,6 +56,7 @@
     "react-beforeunload-component": "^1.2.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-i18next": "^11.8.12",
     "react-icons": "^3.10.0",
     "theme-ui": "^0.3.1"
   },
