--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.2",
+    "gulp-sass": "^5.1.0",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-xhr-backend": "^3.2.2",
     "netlify-cms": "^2.10.48",
     "netlify-cms-app": "^2.12.12",
-    "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-beforeunload-component": "^1.2.3",
@@ -66,6 +66,7 @@
     "prettier": "2.0.5",
     "react-refresh": "^0.8.2",
     "redux": "^3.0.0",
+    "sass": "^1.49.7",
     "typescript": "^3.9.2"
   }
 }
