--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-xhr-backend": "^3.2.2",
+    "mixpanel-browser": "^2.43.0",
     "netlify-cms": "^2.10.48",
     "netlify-cms-app": "^2.12.12",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-beforeunload-component": "^1.2.3",
+    "react-cookie-consent": "^7.2.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-i18next": "^11.8.12",
